syntax = "proto3";

// protoc --go_out=plugins=grpc:.. solc.proto
option go_package = "gen/iotex";
option java_multiple_files = true;
option java_package = "io.iotex.scout.solc";
option java_outer_classname = "SolcProto";

package iotex;

message CompilerRequest {
  string version = 1;
  string language = 2;
  repeated CompilerSources sources = 3;
  CompilerSettings settings = 4;
  //use standard json as input source
  string inputJSON = 5;
  Verify verify = 6;
}
message CompilerSettings { 
  CompilerOptimizer optimizer = 1; 
  string evmVersion = 2;
}
message CompilerOptimizer {
  bool enabled = 1;
  int32 runs = 2;
}
message CompilerSources {
  string name = 1;
  string content = 2;
}
message CompilerResponse { 
  string content = 1; 
  repeated VerifyResponse verified = 2;
}

message Verify {
  string version = 1;
  string bytecode = 2;
}

message VerifyResponse { 
  string sourceName = 1;
  string contractName = 2; 
}

service Solc {
  rpc compilerStandardJSON(CompilerRequest) returns (CompilerResponse) {};
  rpc compiler(CompilerRequest) returns (CompilerResponse) {};
}